--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.0.1",
     "googleapis": "^128.0.0",
+    "helmet": "^8.1.0",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1"
   },
